tests/valid_inputs/bin_xor.cpp
// test '^'

int main() {
	return 40 ^ 2;	// 42
}
